
-----------------------------------------------------------------------
 VERSION 0.1.2 WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.2b0

New Features:

- Plots: Adding series will update an existing series if the names match.
         No need to clear plot #163

New Commands:

- Plot:    Can now delete series in a plot "delete_series" #163

Fixes:

- Themes:   Fixed theme/custom settings inconsistency #165
- Plot:     Fixed automatic boundaries #170
- Tips:     Fixed weird tooltip behavior #171
- Callback: Fixed mouse move callback for main window.

-----------------------------------------------------------------------
 VERSION 0.1.1 (9/3/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.1

Fixes:

- Source Window: Fixed show_source error #166

-----------------------------------------------------------------------
 VERSION 0.1.0 (9/2/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0

New Commands:

- Events:    Added "set_mouse_move_callback" #117
- Callbacks: Added "set_exit_callback" #142
- Callbacks: Added "set_mouse_release_callback" #161

Fixes:

- Tabs:                Fixed tabs being run-time addable
- Mouse/key Callbacks: Now work for builtin windows
- Active Window:       Fixed names in debug

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 17
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta17

Fixes:

- Plot:  Adding new data to a plot bring all data into view
- MacOs: Fixed unthrottled event loop when minimized
- Linux: Fixed unthrottled event loop when minimized
