@@ -7,6 +7,7 @@ add_data("DataStorage1", {"Key": 34})
 add_data("DataStorage2", [23,42,53])
 
 set_main_window_title("DearPyGui Demo")
+set_main_window_size(500, 500)
 add_additional_font("../../Resources/NotoSerifCJKjp-Medium.otf", 20)
 
 add_menu_bar("MenuBar")
